tests/qd/compile_errors/multiple_errors.qd
// Test: compiler should report multiple errors at once

fn safe_div(a:i64 b:i64 -- c:i64)! {
	/
}

fn normal_func(x:i64 -- y:i64) {
	inc
}

fn main() {
	// Error 1: undefined function
	undefined_func

	// Error 2: fallible without if
	10 5 safe_div
	. nl

	// Error 3: ! on non-fallible
	10 normal_func!
	. nl

	// Error 4: stack underflow
	mul
}
